[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yawningtitan"
description = "An abstract, flexible and configurable cyber security simulation."
authors = [{name="Defence Science and Technology Laboratory UK", email="oss@dstl.gov.uk"}]
license = {file = "LICENSE"}
dynamic = ["version", "readme"]
requires-python = ">=3.8, <3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable ",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "Django==4.2",
    "django-cors-headers==3.14.0",
    "dm-tree==0.1.7",
    "gym==0.21.0",
    "imageio==2.9.0",
    "jupyterlab==3.6.1",
    "karateclub==1.3.0",
    "matplotlib==3.6.2",
    "moviepy==1.0.3",
    "networkx==2.5.1",
    "numpy==1.23.4",
    "pandas==1.3.5",
    "platformdirs==2.5.2",
    "pyautogui==0.9.53",
    "pyyaml==5.4.1",
    "ray[rllib]==2.3.1",
    "scipy==1.9.2",
    "seaborn==0.12.1",
    "stable_baselines3==1.6.2",
    "tabulate==0.8.9",
    "tensorboard==2.12.3",
    "tinydb==4.7.0",
    "torch==1.13.1",
    "typer[all]==0.7.0",
    "typing-extensions==4.4.0",
    "waitress==2.1.2"
]


[tool.setuptools.dynamic]
version = {file = "src/yawning_titan/VERSION"}
readme = {file = "README.md"}

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "furo==2023.3.27",
    "nbmake==1.3.5",
    "pip-licenses==4.0.2",
    "pre-commit==2.20.0",
    "pytest==7.2.0",
    "pytest-django==4.5.2",
    "pytest-cov==4.0.0",
    "pytest-flake8==1.1.1",
    "setuptools==66",
    "sphinx==5.3.0",
    "sphinx-code-tabs==0.5.3",
    "sphinx-copybutton==0.5.2",
    "wheel",
    "build"
]
tensorflow = [
    "tensorflow==2.12.0",
]

[project.scripts]
yawning-titan = "yawning_titan.main:app"

[project.urls]
"Homepage" = "https://github.com/dstl/YAWNING-TITAN"
"Documentation" = "https://dstl.github.io/YAWNING-TITAN/"
"Repository" = "https://github.com/dstl/YAWNING-TITAN"
"Issue Tracker" = "https://github.com/dstl/YAWNING-TITAN/issues"
